<?xml version="1.0"?>
<package>
  <name>ntpd_driver</name>
  <version>1.0.1</version>
  <description>ntpd_driver sends TimeReference message time to ntpd server</description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://wiki.ros.org/ntpd_driver</url>
  <url type="repository">https://github.com/vooon/ntpd_driver.git</url>
  <url type="bugtracker">https://github.com/vooon/ntpd_driver/issues</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
