<?xml version="1.0"?>
<package format="2">
  <name>ntpd_driver</name>
  <version>1.2.0</version>
  <description>ntpd_driver sends TimeReference message time to ntpd server</description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ntpd_driver</url>
  <url type="repository">https://github.com/vooon/ntpd_driver.git</url>
  <url type="bugtracker">https://github.com/vooon/ntpd_driver/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>libpoco-dev</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosindex>
      <tags>
        <tag>ntp</tag>
        <tag>time</tag>
        <tag>ntpd</tag>
        <tag>chrony</tag>
      </tags>
      <nodes>
        <node>
          <name>shm_driver</name>
          <description>This node sends time via SHM interface.</description>
          <ros_api>
            <sub name="~/time_ref" type="sensor_msgs/TimeReference">Time source topic. (default topic name)</sub>
            <param name="~/shm_unit" type="int" default="2">SHM Unit (must be same as in ntp server config).</param>
            <param name="~/time_ref_topic" type="string" default="time_ref">Topic name (may be used instead of remap).</param>
            <param name="~/fixup_date" type="bool" default="false">Enable date fixup.</param>
          </ros_api>
        </node>
      </nodes>
    </rosindex>
  </export>
</package>
