<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ntpd_driver</name>
  <version>2.2.0</version>
  <description>ntpd_driver sends TimeReference message time to ntpd server</description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <license file="LICENSE">BSD</license>

  <url type="website">http://wiki.ros.org/ntpd_driver</url>
  <url type="repository">https://github.com/vooon/ntpd_driver.git</url>
  <url type="bugtracker">https://github.com/vooon/ntpd_driver/issues</url>

  <author email="vooon341@gmail.com">Vladimir Ermakov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>libpoco-dev</depend>

  <!-- <exec_depend>launch_xml</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <rosindex>
      <tags>
        <tag>ntp</tag>
        <tag>time</tag>
        <tag>ntpd</tag>
        <tag>chrony</tag>
      </tags>
      <nodes>
        <node>
          <name>shm_driver</name>
          <description>This node sends time via SHM interface.</description>
          <ros_api>
            <sub name="~/time_ref" type="sensor_msgs/TimeReference">Time source topic. (default topic name)</sub>
            <param name="~/shm_unit" type="int" default="2">SHM Unit (must be same as in ntp server config).</param>
            <param name="~/fixup_date" type="bool" default="false">Enable date fixup.</param>
          </ros_api>
        </node>
      </nodes>
    </rosindex>
  </export>
</package>
